add algolia-docsearch doc

--- a/docs/algolia-docsearch/docSearch v3/index.mdx
+++ b/docs/algolia-docsearch/docSearch v3/index.mdx
@@ -1,6 +1,7 @@
 ---
-title: Boshlash
+title: DocSearch v3
 sidebar_position: 2
+sidebar_label: DocSearch v3
 ---
 
 import DocCardList from "@theme/DocCardList"
