--- a/docs/algolia-docsearch/requirements-tips-faq/faq/index.mdx
+++ b/docs/algolia-docsearch/requirements-tips-faq/faq/index.mdx
@@ -1,6 +1,7 @@
 ---
-title: Boshlash
-sidebar_position: 2
+title: FAQ
+sidebar_position: 1
+sidebar_label: FAQ
 ---
 
 import DocCardList from "@theme/DocCardList"
