--- a/docs/docusaurus/getting-started/typescript-support.mdx
+++ b/docs/docusaurus/getting-started/typescript-support.mdx
@@ -6,7 +6,7 @@ sidebar_position: 4
 import Tabs from "@theme/Tabs"
 import TabItem from "@theme/TabItem"
 
-# TypeScript Support
+# TypeScript-ni qo'llab-quvvatlash
 
 Docusaurus is written in TypeScript and provides first-class TypeScript support.
 
