--- a/docs/docusaurus/index.mdx
+++ b/docs/docusaurus/index.mdx
@@ -99,7 +99,7 @@ Docusaurus v2+ barcha foydalanuvchilaringiz uchun qulay va chaqmoq tezligida foy
 ## Dizayn prinsiplari
 
 - **Kam o'rganish kerak**. Docusaurusni o'rganish va undan foydalanish oson bo'lishi kerak, chunki API juda kichik. Ko'pgina narsalarni foydalanuvchilar o'zlari amalga oshira oladilar, hatto buning uchun ko'proq kod va vaqt talab qilsa ham. Noto'g'ri abstraksiyalarga ega bo'lishdan ko'ra, abstraksiyalarsiz bo'lish yaxshiroq va biz foydalanuvchilarning noto'g'ri abstraksiyalar atrofida ishlashlariga to'g'ri kelishini istamaymiz. Zaruriy ma'ruza — [Minimal API Surface Area](https://www.youtube.com/watch?v=4anAwXYqLG8).
-- **Intuitiv**. Foydalanuvchilar Docusaurus loyihasining katalogini ko'rganlarida yoki yangi funksiyalarni qo'shganlarida qiynalmaydilar. Ularga tanish bo'lgan yondashuvlardan foydalangan holda, u intuitiv ko'rinishi va yaratish oson bo'lishi kerak.
+- **Intuitiv**. Foydalanuvchilar Docusaurus loyihasining papkasini ko'rganlarida yoki yangi funksiyalarni qo'shganlarida qiynalmaydilar. Ularga tanish bo'lgan yondashuvlardan foydalangan holda, u intuitiv ko'rinishi va yaratish oson bo'lishi kerak.
 - **Qatlamli arxitektura**. Bizning stekimizning har bir qatlami (kontent/mavzu/stil) o'rtasidagi masalalar ajratilishi aniq bo'lishi kerak — yaxshi abstraksiyalangan va modulli.
 - **Oqilona standart sozlamalar**. Umumiy va mashhur ishlash optimizatsiyalari hamda konfiguratsiyalar foydalanuvchilar uchun amalga oshiriladi, ammo ularga ularni bekor qilish (o'zgartirish) imkoniyati beriladi.
 - **Yetkazib beruvchiga bog'lanib qolish yo'q (No vendor lock-in)**. Foydalanuvchilar standart plaginlar yoki CSSdan foydalanishga majbur emaslar, garchi bu qattiq tavsiya etilsada. React Loadable va React Router kabi ayrim asosiy infratuzilmalar almashtirib bo'lmaydi, chunki biz ularda standart ishlash optimizatsiyasini amalga oshiramiz, biroq yuqori darajadagilarida emas. Markdown dvigatellari, CSS freymvorklari, CSS metodologiyasi va boshqa arxitekturalarni tanlash butunlay foydalanuvchilarning ixtiyorida bo'ladi.
@@ -168,3 +168,20 @@ Rspress va Docusaurus ancha o'xshash. Ularning har ikkisining ham o'ziga xos afz
 - [X](https://x.com/docusaurus)
 - [Blog](https://docusaurus.io/blog)
 - [Discord](https://discord.gg/docusaurus)
+
+<script
+  src="https://giscus.app/client.js"
+  data-repo="buzurgmexrubon/devdocs"
+  data-repo-id="R_kgDOO5H96Q"
+  data-category="Announcements"
+  data-category-id="DIC_kwDOO5H96c4CrVUD"
+  data-mapping="title"
+  data-strict="0"
+  data-reactions-enabled="1"
+  data-emit-metadata="0"
+  data-input-position="bottom"
+  data-theme="dark"
+  data-lang="uz"
+  crossorigin="anonymous"
+  async
+></script>
