--- a/docs/algolia-docsearch/intro/index.mdx
+++ b/docs/algolia-docsearch/intro/index.mdx
@@ -1,6 +1,7 @@
 ---
-title: Boshlash
-sidebar_position: 2
+title: Introduction
+sidebar_position: 1
+sidebar_label: Introduction
 ---
 
 import DocCardList from "@theme/DocCardList"
