--- a/docs/docusaurus/guides/deployment.mdx
+++ b/docs/docusaurus/guides/deployment.mdx
@@ -28,7 +28,7 @@ You can deploy your site to static site hosting services such as [Vercel](https:
 
 A Docusaurus site is statically rendered, and it can generally work without JavaScript!
 
-## Configuration 
+## Configuration
 
 The following parameters are required in `docusaurus.config.js` to optimize routing and serve files from the correct location:
 
@@ -37,7 +37,7 @@ The following parameters are required in `docusaurus.config.js` to optimize rout
 | `url`     | URL for your site. For a site deployed at `https://my-org.com/my-project/`, `url` is `https://my-org.com/`.                             |
 | `baseUrl` | Base URL for your project, with a trailing slash. For a site deployed at `https://my-org.com/my-project/`, `baseUrl` is `/my-project/`. |
 
-## Testing your Build Locally 
+## Testing your Build Locally
 
 It is important to test your build locally before deploying it for production. Docusaurus provides a [`docusaurus serve`](cli.mdx#docusaurus-serve-sitedir) command for that:
 
@@ -47,7 +47,7 @@ npm run serve
 
 By default, this will load your site at [`http://localhost:3000/`](http://localhost:3000/).
 
-## Trailing slash configuration 
+## Trailing slash configuration
 
 Docusaurus has a [`trailingSlash` config](./api/docusaurus.config.js.mdx#trailingSlash) to allow customizing URLs/links and emitted filename patterns.
 
@@ -90,7 +90,7 @@ export default function Home() {
 }
 ```
 
-## Choosing a hosting provider 
+## Choosing a hosting provider
 
 There are a few common hosting options:
 
@@ -156,7 +156,7 @@ Because we can only provide this content on a best-effort basis only, we have st
 
 :::
 
-## Deploying to Netlify 
+## Netlify ga joylashtirish (deploy)
 
 To deploy your Docusaurus sites to [Netlify](https://www.netlify.com/), first make sure the following options are properly configured:
 
@@ -214,7 +214,7 @@ Refer to [slorber/trailing-slash-guide](https://github.com/slorber/trailing-slas
 
 :::
 
-## Deploying to Vercel 
+## Deploying to Vercel
 
 Deploying your Docusaurus project to [Vercel](https://vercel.com/) will provide you with [various benefits](https://vercel.com/) in the areas of performance and ease of use.
 
@@ -224,11 +224,11 @@ Import the project into Vercel using the [Import Flow](https://vercel.com/import
 
 After your project has been imported, all subsequent pushes to branches will generate [Preview Deployments](https://vercel.com/docs/platform/deployments#preview), and all changes made to the [Production Branch](https://vercel.com/docs/git-integrations#production-branch) (usually "main" or "master") will result in a [Production Deployment](https://vercel.com/docs/platform/deployments#production).
 
-## Deploying to GitHub Pages 
+## Deploying to GitHub Pages
 
 Docusaurus provides an easy way to publish to [GitHub Pages](https://pages.github.com/), which comes free with every GitHub repository.
 
-### Overview 
+### Overview
 
 Usually, there are two repositories (at least two branches) involved in a publishing process: the branch containing the source files, and the branch containing the build output to be served with GitHub Pages. In the following tutorial, they will be referred to as **"source"** and **"deployment"**, respectively.
 
@@ -286,7 +286,7 @@ By default, GitHub Pages runs published files through [Jekyll](https://jekyllrb.
 
 :::
 
-### Environment settings 
+### Environment settings
 
 | Name             | Description                                                                                                                                                                                                                               |
 | ---------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
@@ -348,7 +348,7 @@ Alternatively, you can use SSH (`USE_SSH=true`) to log in.
 
 :::
 
-### Triggering deployment with GitHub Actions 
+### Triggering deployment with GitHub Actions
 
 [GitHub Actions](https://help.github.com/en/actions) allow you to automate, customize, and execute your software development workflows right in your repository.
 
@@ -695,7 +695,7 @@ script:
 
 Now, whenever a new commit lands in `main`, Travis CI will run your suite of tests and if everything passes, your website will be deployed via the `yarn deploy` script.
 
-### Triggering deployment with Buddy 
+### Triggering deployment with Buddy
 
 [Buddy](https://buddy.works/) is an easy-to-use CI/CD tool that allows you to automate the deployment of your portal to different environments, including GitHub Pages.
 
@@ -718,7 +718,7 @@ yarn deploy
 
 After creating this simple pipeline, each new commit pushed to the branch you selected deploys your website to GitHub Pages using `yarn deploy`. Read [this guide](https://buddy.works/guides/react-docusaurus) to learn more about setting up a CI/CD pipeline for Docusaurus.
 
-### Using Azure Pipelines 
+### Using Azure Pipelines
 
 1. Sign Up at [Azure Pipelines](https://azure.microsoft.com/en-us/services/devops/pipelines/) if you haven't already.
 2. Create an organization. Within the organization, create a project and connect your repository from GitHub.
@@ -798,7 +798,7 @@ Get started by following [Flightcontrol's step-by-step Docusaurus guide](https:/
 
 [Koyeb](https://www.koyeb.com) is a developer-friendly serverless platform to deploy apps globally. The platform lets you seamlessly run Docker containers, web apps, and APIs with git-based deployment, native autoscaling, a global edge network, and built-in service mesh and discovery. Check out the [Koyeb's Docusaurus deployment guide](https://www.koyeb.com/tutorials/deploy-docusaurus-on-koyeb) to get started.
 
-## Deploying to Render 
+## Deploying to Render
 
 [Render](https://render.com) offers [free static site hosting](https://render.com/docs/static-sites) with fully managed SSL, custom domains, a global CDN, and continuous auto-deploy from your Git repo. Get started in just a few minutes by following [Render's guide to deploying Docusaurus](https://render.com/docs/deploy-docusaurus).
 
@@ -826,7 +826,7 @@ Get started by following [Flightcontrol's step-by-step Docusaurus guide](https:/
 
 That's it. Watch the status and wait till the app is deployed. To open the application in your browser, click on **Action** and **Open** in your application overview.
 
-## Deploying to Hostman 
+## Deploying to Hostman
 
 [Hostman](https://hostman.com/) allows you to host static websites for free. Hostman automates everything, you just need to connect your repository and follow these easy steps:
 
@@ -866,7 +866,7 @@ That's it. Watch the status and wait till the app is deployed. To open the appli
 
    - When the deployment is complete, you will receive an email notification and also see a log entry. All done! Your project is up and ready.
 
-## Deploying to Surge 
+## Deploying to Surge
 
 Surge is a [static web hosting platform](https://surge.sh/help/getting-started-with-surge) that you can use to deploy your Docusaurus project from the command line in seconds. Deploying your project to Surge is easy and free (including custom domains and SSL certs).
 
@@ -889,7 +889,7 @@ First-time users of Surge would be prompted to create an account from the comman
 
 Confirm that the site you want to publish is in the `build` directory. A randomly generated subdomain `*.surge.sh subdomain` is always given (which can be edited).
 
-### Using your domain 
+### Using your domain
 
 If you have a domain name you can deploy your site using the command:
 
@@ -899,7 +899,7 @@ surge build/ your-domain.com
 
 Your site is now deployed for free at `subdomain.surge.sh` or `your-domain.com` depending on the method you chose.
 
-### Setting up CNAME file 
+### Setting up CNAME file
 
 Store your domain in a CNAME file for future deployments with the following command:
 
@@ -909,11 +909,11 @@ echo subdomain.surge.sh > CNAME
 
 You can deploy any other changes in the future with the command `surge`.
 
-## Deploying to Stormkit 
+## Deploying to Stormkit
 
 You can deploy your Docusaurus project to [Stormkit](https://www.stormkit.io), a deployment platform for static websites, single-page applications (SPAs), and serverless functions. For detailed instructions, refer to this [guide](https://www.stormkit.io/blog/how-to-deploy-docusarous).
 
-## Deploying to QuantCDN 
+## Deploying to QuantCDN
 
 1. Install [Quant CLI](https://docs.quantcdn.io/docs/cli/get-started)
 2. Create a QuantCDN account by [signing up](https://dashboard.quantcdn.io/register)
@@ -928,11 +928,11 @@ You can deploy your Docusaurus project to [Stormkit](https://www.stormkit.io), a
 
 See [docs](https://docs.quantcdn.io/docs/cli/continuous-integration) and [blog](https://www.quantcdn.io/blog) for more examples and use cases for deploying to QuantCDN.
 
-## Deploying to Cloudflare Pages 
+## Deploying to Cloudflare Pages
 
 [Cloudflare Pages](https://pages.cloudflare.com/) is a Jamstack platform for frontend developers to collaborate and deploy websites. Get started within a few minutes by following [this page](https://developers.cloudflare.com/pages/framework-guides/deploy-a-docusaurus-site/).
 
-## Deploying to Azure Static Web Apps 
+## Deploying to Azure Static Web Apps
 
 [Azure Static Web Apps](https://docs.microsoft.com/en-us/azure/static-web-apps/overview) is a service that automatically builds and deploys full-stack web apps to Azure directly from the code repository, simplifying the developer experience for CI/CD. Static Web Apps separates the web application's static assets from its dynamic (API) endpoints. Static assets are served from globally-distributed content servers, making it faster for clients to retrieve files using servers nearby. Dynamic APIs are scaled with serverless architectures using an event-driven functions-based approach that is more cost-effective and scales on demand. Get started in a few minutes by following [this step-by-step guide](https://dev.to/azure/11-share-content-with-docusaurus-azure-static-web-apps-30hc).
 
